Update and rename P01_픽스호크 펌웨어 설치.txt to P01_픽스호크 펌웨어 설치.md

--- a/P01_픽스호크 펌웨어 설치.md
+++ b/P01_픽스호크 펌웨어 설치.md
@@ -1,3 +1,5 @@
+(1) 우분투 환경 구축
+
 1. 우분투 서버 설치
 https://ubuntu.com/download/server
 
@@ -29,3 +31,6 @@ ip addr
 7. 윈도우에서 cmd 열기
 ssh (id이름)@(inet 숫자)
 만약 안되면, ssh-keygen -R (inet 숫자)
+
+8. vmware 종료시 
+sudo shutdown -h now
