Update P01_픽스호크 펌웨어 설치.md

--- a/P01_픽스호크 펌웨어 설치.md
+++ b/P01_픽스호크 펌웨어 설치.md
@@ -1,36 +1,36 @@
-(1) 우분투 환경 구축
+## (1) 우분투 환경 구축
 
-1. 우분투 서버 설치
+### 1. 우분투 서버 설치
 https://ubuntu.com/download/server
 
-2. VMWare 설치
+### 2. VMWare 설치
 https://softwareupdate.vmware.com/cds/vmw-desktop/player/17.5.2/23775571/windows/core/
 
-3. 
-1) Create a New Virtual Machine 클릭
-2) Browse --> 우분투 설치 경로
-3) 용량 선택에서 적어도 30Gb
-4) split --> store
-5) ubuntu-lv 설정된 용량에서 더 늘리기 (ex 13.996 --> 27.996)
-6) Install OpenSSH server 는 체크
+### 3. 
+#### 1) Create a New Virtual Machine 클릭
+#### 2) Browse --> 우분투 설치 경로
+#### 3) 용량 선택에서 적어도 30Gb
+#### 4) split --> store
+#### 5) ubuntu-lv 설정된 용량에서 더 늘리기 (ex 13.996 --> 27.996)
+#### 6) Install OpenSSH server 는 체크
 
-4. reboot 후 failed...cdrom이 뜸. 
+### 4. reboot 후 failed...cdrom이 뜸. 
 여기서 i finished installing 클릭. 
 그 후 엔터
 
-5.
+### 5.
 service --status-all
 위의 명령어로 ssh가 [-] 상태로 있는지 확인
 sudo systemctl start ssh
 로 ssh 서비스 활성화
 
-6. 
+### 6. 
 ip addr
 여기서 inet ... 이 숫자 확인
 
-7. 윈도우에서 cmd 열기
+### 7. 윈도우에서 cmd 열기
 ssh (id이름)@(inet 숫자)
 만약 안되면, ssh-keygen -R (inet 숫자)
 
-8. vmware 종료시 
+### 8. vmware 종료시 
 sudo shutdown -h now
