Update P01_픽스호크 펌웨어 설치.md

--- a/P01_픽스호크 펌웨어 설치.md
+++ b/P01_픽스호크 펌웨어 설치.md
@@ -34,3 +34,39 @@ ssh (id이름)@(inet 숫자)
 
 ### 8. vmware 종료시 
 sudo shutdown -h now
+
+## (2) PX4 펌웨어 빌드
+
+### 0. 
+df -h
+로 용량 확인 (dev/mapper... 의 avail 용량 확인)
+
+### 1. 
+git clone --recursive https://github.com/PX4/PX4-Autopilot.git
+
+### 2. 
+bash ./PX4-Autopilot/Tools/setup/ubuntu.sh
+cd PX4-...
+
+사용 예시) make px4_fmu-v6c_default
+아래 링크에서 사용할 fc 커맨드 확인 가능
+https://docs.px4.io/main/ko/dev_setup/building_px4.html
+
+### 3. 다 빌드되면 creating ... 경로 기억하기
+/PX4-Autopilot/build/px4_fmu-v6c_default/px4_fmu-v6c_default.px4
+
+### 4. 윈도우 cmd에서
+scp (id이름)@(ip):/home/(id이름)/PX4-Autopilot/build/px4_fmu-v6c_default/px4_fmu-v6c_default.px4 .
+
+## (3) Ardupilot 펌웨어 빌드
+
+### 0. 용량 확인
+
+### 1. 
+git clone --recurse-submodules https://github.com/ArduPilot/ardupilot.git
+
+### 2.
+ardupilot/Tools/environment_install/install-prereqs-ubuntu.sh -y
+(1시간은 쓸 생각으로 명령어 입력)
+
+### 3. 
