Update P01_픽스호크 펌웨어 설치.md

--- a/P01_픽스호크 펌웨어 설치.md
+++ b/P01_픽스호크 펌웨어 설치.md
@@ -48,7 +48,8 @@ git clone --recursive https://github.com/PX4/PX4-Autopilot.git
 bash ./PX4-Autopilot/Tools/setup/ubuntu.sh
 cd PX4-...
 
-사용 예시) make px4_fmu-v6c_default
+사용 예시) 
+make px4_fmu-v6c_default
 아래 링크에서 사용할 fc 커맨드 확인 가능
 https://docs.px4.io/main/ko/dev_setup/building_px4.html
 
@@ -69,4 +70,17 @@ git clone --recurse-submodules https://github.com/ArduPilot/ardupilot.git
 ardupilot/Tools/environment_install/install-prereqs-ubuntu.sh -y
 (1시간은 쓸 생각으로 명령어 입력)
 
-### 3. 
+사용 예시)
+./waf configure --board MatekH743
+./waf copter
+
+### 3. 다 빌드 되면 Build direcotry ... 기억하기
+... /ardupilot/build/MatekH743
+
+### 4. 
+cd
+cd /ardupilot/build/MatekH743/bin
+여기서 .apj 파일 확인
+
+### 5. 윈도우 cmd에서
+scp (id이름)@(ip):/home/(id이름)/ardupilot/build/MatekH743/bin/arducopter.apj .
