--- a/P01_픽스호크 펌웨어 설치.md
+++ b/P01_픽스호크 펌웨어 설치.md
@@ -54,6 +54,7 @@ make px4_fmu-v6c_default
 https://docs.px4.io/main/ko/dev_setup/building_px4.html
 
 ### 3. 다 빌드되면 creating ... 경로 기억하기
+cd PX4-Autopilot
 /PX4-Autopilot/build/px4_fmu-v6c_default/px4_fmu-v6c_default.px4
 
 ### 4. 윈도우 cmd에서
